[project]
name = "bingo-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Connell",email = "basepointdesign@outlook.com"}
]
requires-python = ">=3.12"
package-mode = false
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (==2.0.44)",
    "pydantic-settings (==2.11.0)",
    "psycopg2-binary (==2.9.11)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "asgiref (>=3.11.0,<4.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "sse-starlette (>=3.0.3,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
